<resources>
    <string name="app_name">Desvio Padrão</string>

    <string name="x1_string">x1</string>
    <string name="x2_string">x2</string>
    <string name="dx1_string">Delta x1</string>
    <string name="dx2_string">Delta x2</string>
    <string name="k_string">k</string>
    <string name="m_string">m</string>
    <string name="a_string">a</string>
    <string name="ed_a_string"></string>
    <string name="d_string">Desvio Padrão</string>
    <string name="ed_d_string"></string>
    <string name="ed_k_string"></string>
    <string name="ed_m_string"></string>
    <string name="ed_x2_string"></string>
    <string name="ed_x1_string"></string>
    <string name="ed_dx2_string"></string>
    <string name="ed_dx1_string"></string>
    <string name="action_settings">Settings</string>

    <color name="cor_botao">#ffaa24</color>
    <color name="cor_letra">#ffffff</color>
</resources>
