<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >

    <TextView
        android:text="@string/x1_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/x1_s" />

    <EditText
        android:text="@string/ed_x1_string"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/x1_edit"
        android:layout_below="@+id/x1_s"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/x2_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/x2_s"
        android:layout_below="@+id/x1_edit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:text="@string/ed_x2_string"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/x2_edit"
        android:layout_below="@+id/x2_s"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/a_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/a_s"
        android:layout_below="@+id/x2_edit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:text="@string/ed_a_string"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/a_edit"
        android:layout_below="@+id/a_s"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/k_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/k_s"
        android:layout_below="@+id/a_edit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:text="@string/ed_k_string"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/k_edit"
        android:layout_below="@+id/k_s"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/m_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/m_s"
        android:layout_below="@+id/k_edit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:text="@string/ed_m_string"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/m_edit"
        android:layout_below="@+id/m_s"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/d_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/d_s"
        android:layout_below="@+id/m_edit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:text="@string/ed_d_string"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/d_edit"
        android:layout_below="@+id/d_s"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />




    <Button
        android:text="ok"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btOk"
        android:background="@color/cor_botao"
        android:textColor="@color/cor_letra"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
